fix mobile image stretch

--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -120,7 +120,6 @@
             "details . button";
             
             .image {
-                grid-row-end: 1;
                 grid-area: image;
                 grid-row: 1;
                 justify-self: start;
