--- a/src/assets/scss/pages/_listings.scss
+++ b/src/assets/scss/pages/_listings.scss
@@ -110,7 +110,7 @@
         
         .image {
           width: 100%;
-          height: 100%;
+          height: 162px;
 
           @include respond-to-screen('medium') {
             & {
